--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.drones.dimuth</groupId>
 	<artifactId>drone.management.service</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>drones-management-service</name>
 	<description>Drone Management Service</description>
 	<properties>
