--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,11 @@
 name: Java CI
 
-on: [push]
+on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  pull_request:
+    branches:
+      - 'master'
+
 
 jobs:
   build:
